# android-frameworks-benchmark

./: .clang-tidy  .editorconfig  .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: ci.yml
examples/compose/: build.gradle.kts
examples/compose/src/main/: AndroidManifest.xml
examples/compose/src/main/java/io/timon/benchmark/compose/: Application.kt  MainActivity.kt
examples/compose/src/main/res/values/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
pixelsampler/: build.gradle.kts
pixelsampler/src/main/: AndroidManifest.xml
pixelsampler/src/main/cpp/: CMakeLists.txt  choreographer_callback.cpp  choreographer_callback.h  jni_helpers.cpp  jni_helpers.h  pixel_sampler.cpp  pixel_sampler.h  view_locator.cpp  view_locator.h
pixelsampler/src/main/java/io/timon/android/pixelsampler/: PixelSampler.kt  PixelSamplerService.kt
